# launch-11

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  guide.md
bot/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
bot/db/migrations/: 002_adrs.sql  003_billing.sql
bot/deploy/: fetch-env.sh
bot/ops/: alerts-launch11.sh  provision-prod.sh
bot/src/launch11bot/: config.py  main.py  observability.py
bot/src/launch11bot/app/: turn.py
bot/src/launch11bot/billing/: service.py
bot/src/launch11bot/db/: memory_repo.py  pg_repo.py  repo.py
bot/src/launch11bot/llm/: client.py  history.py  system_prompt.py  tools.py
bot/src/launch11bot/pipeline/: assemble.py  choice.py  orchestrator.py  question.py  slug.py  steps.py  tool_dispatcher.py
bot/tests/: conftest.py  test_access_and_scrub.py  test_adr.py  test_answer_comprehension.py  test_assemble.py  test_assemble_full.py  test_billing.py  test_billing_gate.py  test_content_not_destroyed.py  test_dialog_state.py  test_entitlement_refund.py  test_finish_full.py  test_history.py  test_never_strand_the_user.py  test_northern_star_quality.py  test_orchestrator.py  test_overload_retry.py  test_owner.py  test_persistence_pg.py  test_product_name.py  test_progress_invariant.py  test_question_bypass.py  test_question_validation.py  test_refund_pg.py  test_review_tails.py  test_sanitize.py  test_set_version.py  test_spec_delivery.py  test_steps.py  test_steps_full.py  test_steps_one_question.py  test_tools.py  test_turn_deadline_wiring.py  test_turn_dialogue.py  test_turn_service.py
claude-ai/: SKILL.md
(+41 files in other folders)
