[project]
name = "launch11bot"
version = "0.1.0"
description = "Telegram bot guiding users through the Seysembay product-launch pipeline"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "anthropic>=0.40",
    "asyncpg>=0.30",
    "pydantic-settings>=2.5",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
launch11bot = ["db/migrations/*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
